--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,48 +5,24 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+            <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/responsive.css') }}">
         {% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="{{ path('homepage') }}">
-                <img src="{{ asset('doc/icon_bw.png') }}" width="30" alt=""> Symfony 4
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="{{ asset('images/rotary.png') }}" class="logo-rotary" width="350" alt="logo rotary">
+        </a>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Accueil</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Articles
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="{{ path('article_index') }}">Liste</a>
-                            <a class="dropdown-item" href="{{ path('article_new') }}">Ajouter</a>
-                        </div>
-                    </li>
-                    {% if is_granted('ROLE_SUPER_ADMIN') %}
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fa fa-cog"></i> Paramètres
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="{{ path('user_index') }}">Utilisateurs</a>
-                            </div>
-                        </li>
-                    {% endif %}
-                </ul>
-                {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                    <a href="{{ path('app_logout') }}" class="nav-link" style="color:#ffffff">Deconnexion</a>
-                {% endif %}
-            </div>
-        </nav>
+            <div class="col-md-2"></div>
+            <div class="col-md-8 banner-title">Le Rotary des innovateurs</div>
+            <div class="col-md-1"></div>
+        </div>
+        <img src="{{ asset('images/logo-district.png') }}" class="logo-district" alt="logo du district" width="250">
+    </nav>
         {% block body %}{% endblock %}
         {% block javascripts %}
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
