--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+@import url('font-awesome.css');
 .banner-title{
     font-size: 2.5rem;
     color: #F6A81C;
@@ -13,6 +14,16 @@
     margin: 60px auto 35px auto;
     text-align: center;
     color: #f6a81c;
+    font-weight: bold;
+}
+
+.gestion{
+    margin-bottom: 100px;
+}
+
+.gestion h4{
+    margin-bottom: 25px;
+    color: #F6A81C;
     font-weight: bold;
 }
 
@@ -62,4 +73,17 @@
 .profile .list-group{
     margin-top: 50px;
 }
+.footer{
+    background-color: #cccccc;
+    margin-top: 50px;
+}
 
+.footer .copyright{
+    padding: 15px 0;
+    font-size: 13px;
+    color: #1a1a1a;
+}
+
+.copyright a{
+    color: #1a1a1a;
+}
