--- a/templates/backend.html.twig
+++ b/templates/backend.html.twig
@@ -2,9 +2,10 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Backend ::{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+            <link rel="stylesheet" href="{{ asset('css/style.css') }}">
         {% endblock %}
     </head>
     <body>
@@ -24,27 +25,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Listes des inscrits</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Articles
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="{{ path('article_index') }}">Liste</a>
-                            <a class="dropdown-item" href="{{ path('article_new') }}">Ajouter</a>
-                        </div>
-                    </li>
-                    {% if is_granted('ROLE_SUPER_ADMIN') %}
 
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fa fa-cog"></i> Paramètres
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="{{ path('user_index') }}">Club</a>
+                                <a class="dropdown-item" href="{{ path('club_index') }}">Club</a>
+                                {% if is_granted('ROLE_SUPER_ADMIN') %}
                                 <a class="dropdown-item" href="{{ path('user_index') }}">Utilisateurs</a>
+                                {% endif %}
                             </div>
                         </li>
-                    {% endif %}
                 </ul>
                 {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                     <a href="{{ path('app_logout') }}" class="nav-link" style="color:#bf0010">Deconnexion</a>
