--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,6 +24,16 @@
         <img src="{{ asset('images/logo-district.png') }}" class="logo-district" alt="logo du district" width="250">
     </nav>
         {% block body %}{% endblock %}
+        <section class="footer">
+            <div class="container">
+                <div class="row copyright">
+                    <div class="col-8">
+                        &copy; Copyright 2020 <a href="http://dreammaker-ci.com" target="_blank">DREAM MAKER</a> | Tous droits réservés.
+                    </div>
+                    <div class="col-4 text-right"><a href="{{ path('backend') }}" target="_blank">Backoffice</a></div>
+                </div>
+            </div>
+        </section>
         {% block javascripts %}
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
