Gestion frontend participant

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{{ path('homepage') }}">
             <img src="{{ asset('images/rotary.png') }}" class="logo-rotary" width="350" alt="logo rotary">
         </a>
 
