--- a/templates/backend.html.twig
+++ b/templates/backend.html.twig
@@ -23,7 +23,7 @@
                         <a class="nav-link" href="#">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Listes des inscrits</a>
+                        <a class="nav-link" href="{{ path('participant_index') }}">Listes des inscrits</a>
                     </li>
 
                         <li class="nav-item dropdown">
