--- a/templates/participant/index.html.twig
+++ b/templates/participant/index.html.twig
@@ -3,53 +3,82 @@
 {% block title %}Participant index{% endblock %}
 
 {% block body %}
-    <h1>Participant index</h1>
+    <div class="jumbotron jumbotron-fluid text-left">
+        <div class="container">
+            <h1>Gestion des participants</h1>
+        </div>
+    </div>
+    <div class="container gestion">
+        <h4>{{ 'form.titleTable'|trans }}</h4>
+        <table  id="participants" class="table display" style="width:100%">
+            <thead>
+            <tr>
+                <th class="text-center">Id</th>
+                <th class="text-center">Inscription</th>
+                <th class="text-center">club</th>
+                <th class="text-center">Code</th>
+                <th class="text-center">Nom & prenoms</th>
+                <th class="text-center">Telephone</th>
+                <th class="text-center">NombreTicket</th>
+                <th class="text-center">MontantTotal</th>
+                <th class="text-center">actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for participant in participants %}
+                <tr>
+                    <td>{{ loop.index }}</td>
+                    <td>{{ participant.createdAt ? participant.createdAt|date('Y-m-d') : '' }}</td>
+                    <td>{{ participant.club.nom }}</td>
+                    <td>{{ participant.code }}</td>
+                    <td> {{ participant.prenoms|title }} {{ participant.nom|upper }}</td>
+                    <td>{{ participant.telephone }}</td>
+                    <td class="text-center">{{ participant.nombreTicket }}</td>
+                    <td class="text-right">{{ participant.montantTotal|number_format(0,'','.') }}</td>
+                    <td>
+                        <a href="{{ path('inscription_show', {'slug': participant.slug}) }}"><i class="fa fa-eye"></i></a> |
+                        <a href="{{ path('inscription_show', {'slug': participant.slug}) }}"><i class="fa fa-edit"></i></a>
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="9"><em>Aucun participant</em></td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nom</th>
-                <th>Prenoms</th>
-                <th>Ville</th>
-                <th>Telephone</th>
-                <th>Email</th>
-                <th>Montant</th>
-                <th>NombreTicket</th>
-                <th>MontantTotal</th>
-                <th>Slug</th>
-                <th>Code</th>
-                <th>CreatedAt</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for participant in participants %}
-            <tr>
-                <td>{{ participant.id }}</td>
-                <td>{{ participant.nom }}</td>
-                <td>{{ participant.prenoms }}</td>
-                <td>{{ participant.ville }}</td>
-                <td>{{ participant.telephone }}</td>
-                <td>{{ participant.email }}</td>
-                <td>{{ participant.montant }}</td>
-                <td>{{ participant.nombreTicket }}</td>
-                <td>{{ participant.montantTotal }}</td>
-                <td>{{ participant.slug }}</td>
-                <td>{{ participant.code }}</td>
-                <td>{{ participant.createdAt ? participant.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>
-                    <a href="{{ path('participant_show', {'id': participant.id}) }}">show</a>
-                    <a href="{{ path('inscription_show', {'slug': participant.slug}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="13">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+{% endblock %}
 
-    <a href="{{ path('participant_new') }}">Create new</a>
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.6.1/css/buttons.dataTables.min.css">
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.6.1/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.6.1/js/buttons.flash.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.6.1/js/buttons.html5.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.6.1/js/buttons.print.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#participants').DataTable({
+                "paging": false,
+                //"ordering": false,
+                "info": false,
+                dom: 'Bfrtip',
+                buttons:[
+                    'excel','pdf','print'
+                ]
+            });
+        } );
+    </script>
 {% endblock %}
