--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -22,10 +22,10 @@
                         </div>
                     {% endif %}
 
-                    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-                    <label for="inputUsername">Username</label>
+                    <h1 class="h3 mb-3 font-weight-normal">{{'security.pleaseSignin'|trans}}</h1>
+                    <label for="inputUsername">{{'security.username'|trans}}</label>
                     <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" required autofocus autocomplete="off">
-                    <label for="inputPassword">Password</label>
+                    <label for="inputPassword">{{'security.password'|trans}}</label>
                     <input type="password" name="password" id="inputPassword" class="form-control" required>
 
                     <input type="hidden" name="_csrf_token"
@@ -39,12 +39,12 @@
 					#}
 						<div class="checkbox mb-3">
 							<label>
-								<input type="checkbox" name="_remember_me"> Remember me
+								<input type="checkbox" name="_remember_me">{{'security.rememberMe'|trans}}
 							</label>
 						</div>
 
                     <button class="btn btn-lg btn-primary" type="submit">
-                        Sign in
+                        {{'security.btnSignIn'|trans}}
                     </button>
                 </form>
             </div>
