--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -14,6 +14,16 @@
     <section class="formulaire">
         <div class="container">
             <h4>Veuillez remplir les champs</h4>
+            {% for label, messages in app.flashes %}
+                {% for message in messages %}
+                    <div class="alert alert-{{label}}" role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endfor %}
+            {% endfor %}
             <div class="row" style="background-color:#f9f9f9;">
                 <div class="col-md-10 col-sm-12 offset-md-1">
                     {{ include('participant/_form.html.twig') }}
