--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,7 +30,7 @@
                     <div class="col-8">
                         &copy; Copyright 2020 <a href="http://dreammaker-ci.com" target="_blank">DREAM MAKER</a> | Tous droits réservés.
                     </div>
-                    <div class="col-4 text-right"><a href="{{ path('backend') }}" target="_blank">Backoffice</a></div>
+                    <div class="col-4 text-right"><a href="{{ path('participant_index') }}" target="_blank">Backoffice</a></div>
                 </div>
             </div>
         </section>
