--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Page d'accueil{% endblock %}
+{% block title %}Formulaire d'inscription{% endblock %}
 
 {% block body %}
     <section class="bienvenue">
@@ -47,6 +47,7 @@
 {% block javascripts %}
     {{ parent() }}
     <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
+    <script src="{{ asset('js/inscription.js') }}"></script>
     <script>
         $(document).ready(function() {
             $('.select2').select2();
