--- a/templates/participant/_form.html.twig
+++ b/templates/participant/_form.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form,{'attr':{'class':'inscription'}}) }}
+{{ form_start(form,{'attr':{'class':'inscription', 'id':'formInscription', 'onload':'montantTotal()'}}) }}
     <div class="row">
     <div class="col-md-6 col-sm-6">
         <div class="row form-group">
@@ -78,7 +78,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-6 col-sm-6">
+    <!--<div class="col-md-6 col-sm-6">
         <div class="row form-group">
             <label for="Montant" class="col-md-2 col-form-label">{{form_label(form.montant)}}</label>
             <div class="col-md-10">
@@ -90,12 +90,13 @@
                 {% endif %}
             </div>
         </div>
-    </div>
+    </div>-->
     <div class="col-md-6 col-sm-6">
         <div class="row form-group">
             <label for="nombre" class="col-md-4 col-form-label">{{form_label(form.nombreTicket)}}</label>
             <div class="col-md-8">
                 {{form_widget(form.nombreTicket)}}
+                <em style="font-size: 12px; color: darkred; font-weight:bold;">Le montant de base du ticket est de 50.000FCFA</em>
                 {% if form_errors(form.nombreTicket) %}
                     <div class="alert alert-danger" role="alert">
                         {{ form_errors(form.nombreTicket) }}
@@ -109,6 +110,7 @@
             <label for="total" class="col-md-4 col-form-label">{{form_label(form.montantTotal)}}</label>
             <div class="col-md-8">
                 {{form_widget(form.montantTotal)}}
+                <em style="font-size: 12px; color: darkred; font-weight:bold;">Les frais par ticket est de 1.500 FCFA</em>
                 {% if form_errors(form.montantTotal) %}
                     <div class="alert alert-danger" role="alert">
                         {{ form_errors(form.montantTotal) }}
