--- a/templates/backend.html.twig
+++ b/templates/backend.html.twig
@@ -25,6 +25,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('participant_index') }}">Listes des inscrits</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('participant_index') }}">Tickets</a>
+                    </li>
 
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
