--- a/templates/participant/index.html.twig
+++ b/templates/participant/index.html.twig
@@ -1,6 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'backend.html.twig' %}
 
-{% block title %}Participant index{% endblock %}
+{% block title %}{{ parent()}} Gestion des participants{% endblock %}
 
 {% block body %}
     <div class="jumbotron jumbotron-fluid text-left">
