--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'backend.html.twig' %}
 
-{% block title %}User index{% endblock %}
+{% block title %}{{ parent()}} Gestion des utilisateurs{% endblock %}
 
 {% block body %}
     <div class="jumbotron jumbotron-fluid text-left">
