--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -43,11 +43,13 @@
 {% block stylesheets %}
     {{ parent() }}
     <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="{{ asset('dist/css/bootstrap-formhelpers.min.css') }}">
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
     <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
     <script src="{{ asset('js/inscription.js') }}"></script>
+    <script src="{{ asset('dist/js/bootstrap-formhelpers.min.js') }}"></script>
     <script>
         $(document).ready(function() {
             $('.select2').select2();
