--- a/templates/invite/_form.html.twig
+++ b/templates/invite/_form.html.twig
@@ -7,6 +7,7 @@
     </div>
     <div class="form-group">
         {{ form_row(form.invitePhone) }}
+        <em style="font-size: 12px; color: darkred; font-weight:bold;">Le numero WhatsApp de votre invité</em>
     </div>
     {{ form_widget(form) }}
     {% if ticket.invite is null %}
